--- a/src/AppBundle/Resources/views/Search/card-props.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-props.html.twig
@@ -1,71 +1,103 @@
 {% import "AppBundle::macros.html.twig" as macros %}
 
-{% if card.traits %}
-<p class="card-traits">{{ card.traits }}</p>
-{% endif %}
+<style>
+	.card-info-block {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	.card-info-block p {
+		margin: 0;
+		padding: 0;
+	}
+	.card-info-block > div:nth-child(2) {
+		text-align: right;
+	}
+	.investigator-stat-list {
+		padding: 0;
+		margin: 0;
+		list-style-type: none;
+		display: flex;
+		flex-direction: row;
+		gap: 1rem;
+	}
+</style>
 
-{% if card.type_code == 'asset' or card.type_code == 'event' or card.xp %}
-<div class="card-props">
-	{% if card.type_code == 'asset' or card.type_code == 'event'%}
-	{% trans %}Cost{% endtrans %}: {{ macros.integer_or_x(card.cost) }}.
-	{% endif %}
-	{% if card.xp %}
-	{% trans %}XP{% endtrans %}: {{ card.xp }}.
-	{% endif %}
+<div class="card-info-block">
+	<div>
+		<p class="card-type">{{ card.type_name }}{% if card.stage %}. Stage {{card.stage}}{% endif %}{% if card.slot %}. {{card.slot}}{% endif %}{% if card.subtype_name is defined %}. {{card.subtype_name}}{% endif %}</p>
+
+		{% if card.traits %}
+		<p class="card-traits">{{ card.traits }}</p>
+		{% endif %}
+
+		{% if card.type_code == 'asset' or card.type_code == 'event' or card.xp %}
+			<p>
+			{% if card.type_code == 'asset' or card.type_code == 'event'%}
+			{% trans %}Cost{% endtrans %}: {{ macros.integer_or_x(card.cost) }}.
+			{% endif %}
+			{% if card.xp %}
+			{% trans %}XP{% endtrans %}: {{ card.xp }}.
+			{% endif %}
+			</p>
+		{% endif %}
+
+	</div>
+	<div>
+		{% include 'AppBundle:Search:card-faction.html.twig' %}
+		{% if card.type_code == 'investigator' %}
+		<ul class="investigator-stat-list">
+			<li title="{% trans %}Willpower{% endtrans %}"><span class="icon icon-large icon-willpower color-willpower"></span> {{ macros.integer_or_x(card.skill_willpower) }}</li>
+			<li title="{% trans %}Intellect{% endtrans %}"><span class="icon icon-large icon-intellect color-intellect"></span> {{ macros.integer_or_x(card.skill_intellect) }}</li>
+			<li title="{% trans %}Combat{% endtrans %}"><span class="icon icon-large icon-combat color-combat"></span> {{ macros.integer_or_x(card.skill_combat) }}</li>
+			<li title="{% trans %}Agility{% endtrans %}"><span class="icon icon-large icon-agility color-agility"></span> {{ macros.integer_or_x(card.skill_agility) }}</li>
+		</ul>
+		{% if card.health or card.sanity%}
+			<div>
+			{% trans %}Health{% endtrans %}: {{ macros.integer_or_x(card.health) }}.
+			{% trans %}Sanity{% endtrans %}: {{ macros.integer_or_x(card.sanity) }}.
+			</div>
+		{% endif %}
+		{% elseif card.type_code == 'enemy' %}
+			<div>
+			{% trans %}Fight{% endtrans %}: {{ macros.integer_or_x(card.enemy_fight) }}.
+			{% trans %}Health{% endtrans %}: {{ macros.integer_or_x(card.health) }}{% if card.health_per_investigator %}<span class="icon icon-per_investigator"></span>{% endif %}.
+			{% trans %}Evade{% endtrans %}: {{ macros.integer_or_x(card.enemy_evade) }}.
+			</div>
+			<div>
+			{% trans %}Damage{% endtrans %}: {{ macros.integer_or_x(card.enemy_damage) }}.
+			{% trans %}Horror{% endtrans %}: {{ macros.integer_or_x(card.enemy_horror) }}.
+			</div>
+		{% else %}
+			{% if card.doom or card.clues is not null or card.shroud %}
+			<div>
+			{% if card.doom %}<span title="Doom" class="icon icon-doom color-doom"></span>{% trans %}Doom{% endtrans %}: {{card.doom}}.{% endif %}
+			{% if card.shroud %}<span title="Shroud" class="icon icon-shroud color-shroud"></span>{% trans %}Shroud{% endtrans %}: {{macros.integer_or_x(card.shroud)}}.{% endif %}
+			{% if card.clues %}<span title="Clues" class="icon icon-clues color-clues"></span>{% trans %}Clues{% endtrans %}: {{card.clues}}{% if not card.clues_fixed %}<span class="icon icon-per_investigator" title="Per Investigator"></span>{% endif %}.{% endif %}
+			{% if card.clues == 0 %}<span title="Clues" class="icon icon-clues color-clues"></span>{% trans %}Clues{% endtrans %}: {% if card.clues is null %}&ndash;{% else %}{{card.clues}}{% endif %}{% endif %}
+			</div>
+			{% endif %}
+			{% if card.clues is null and card.type_code == 'act' %}<div>{% trans %}Clues{% endtrans %}: &ndash;</div>{% endif %}
+			{% if card.doom is null and card.type_code == 'agenda' %}<div>{% trans %}Doom{% endtrans %}: &ndash;</div>{% endif %}
+			{% if card.skill_willpower or card.skill_intellect or card.skill_combat or card.skill_agility or card.skill_wild %}
+			<div>
+
+			{% if card.skill_willpower %}{% for i in 1..card.skill_willpower %}<span title="Willpower" class="icon icon-large icon-willpower color-willpower"></span>{% endfor %}{% endif %}
+			{% if card.skill_intellect %}{% for i in 1..card.skill_intellect %}<span title="Intellect" class="icon icon-large icon-intellect color-intellect"></span>{% endfor %}{% endif %}
+			{% if card.skill_combat %}{% for i in 1..card.skill_combat %}<span title="Combat" class="icon icon-large icon-combat color-combat"></span>{% endfor %}{% endif %}
+			{% if card.skill_agility %}{% for i in 1..card.skill_agility %}<span title="Agility" class="icon icon-large icon-agility color-agility"></span>{% endfor %}{% endif %}
+			{% if card.skill_wild %}{% for i in 1..card.skill_wild %}<span title="Wild" class="icon icon-large icon-wild color-wild"></span>{% endfor %}{% endif %}
+			</div>
+			{% endif %}
+			{% if card.health or card.sanity%}
+			<div>
+			{% trans %}Health{% endtrans %}: {{ macros.integer_or_x(card.health) }}.
+			{% trans %}Sanity{% endtrans %}: {{ macros.integer_or_x(card.sanity) }}.
+			</div>
+			{% endif %}
+		{% endif %}
+
+	</div>
 </div>
-{% endif %}
-
-{% if card.type_code == 'investigator' %}
-<div class="card-props">
-	{% trans %}Willpower{% endtrans %}: {{ macros.integer_or_x(card.skill_willpower) }}.
-	{% trans %}Intellect{% endtrans %}: {{ macros.integer_or_x(card.skill_intellect) }}.
-	{% trans %}Combat{% endtrans %}: {{ macros.integer_or_x(card.skill_combat) }}.
-	{% trans %}Agility{% endtrans %}: {{ macros.integer_or_x(card.skill_agility) }}.
-</div>
-{% if card.health or card.sanity%}
-	<div>
-	{% trans %}Health{% endtrans %}: {{ macros.integer_or_x(card.health) }}.
-	{% trans %}Sanity{% endtrans %}: {{ macros.integer_or_x(card.sanity) }}.
-	</div>
-{% endif %}
-{% elseif card.type_code == 'enemy' %}
-	<div>
-	{% trans %}Fight{% endtrans %}: {{ macros.integer_or_x(card.enemy_fight) }}.
-	{% trans %}Health{% endtrans %}: {{ macros.integer_or_x(card.health) }}{% if card.health_per_investigator %}<span class="icon icon-per_investigator"></span>{% endif %}.
-	{% trans %}Evade{% endtrans %}: {{ macros.integer_or_x(card.enemy_evade) }}.
-	</div>
-	<div>
-	{% trans %}Damage{% endtrans %}: {{ macros.integer_or_x(card.enemy_damage) }}.
-	{% trans %}Horror{% endtrans %}: {{ macros.integer_or_x(card.enemy_horror) }}.
-	</div>
-{% else %}
-	{% if card.doom or card.clues is not null or card.shroud %}
-	<div>
-	{% if card.doom %}<span title="Doom" class="icon icon-doom color-doom"></span>{% trans %}Doom{% endtrans %}: {{card.doom}}.{% endif %}
-	{% if card.shroud %}<span title="Shroud" class="icon icon-shroud color-shroud"></span>{% trans %}Shroud{% endtrans %}: {{macros.integer_or_x(card.shroud)}}.{% endif %}
-	{% if card.clues %}<span title="Clues" class="icon icon-clues color-clues"></span>{% trans %}Clues{% endtrans %}: {{card.clues}}{% if not card.clues_fixed %}<span class="icon icon-per_investigator" title="Per Investigator"></span>{% endif %}.{% endif %}
-	{% if card.clues == 0 %}<span title="Clues" class="icon icon-clues color-clues"></span>{% trans %}Clues{% endtrans %}: {% if card.clues is null %}&ndash;{% else %}{{card.clues}}{% endif %}{% endif %}
-	</div>
-	{% endif %}
-	{% if card.clues is null and card.type_code == 'act' %}<div>{% trans %}Clues{% endtrans %}: &ndash;</div>{% endif %}
-	{% if card.doom is null and card.type_code == 'agenda' %}<div>{% trans %}Doom{% endtrans %}: &ndash;</div>{% endif %}
-	{% if card.skill_willpower or card.skill_intellect or card.skill_combat or card.skill_agility or card.skill_wild %}
-	<div>
-	{% trans %}Test Icons{% endtrans %}:
-	{% if card.skill_willpower %}{% for i in 1..card.skill_willpower %}<span title="Willpower" class="icon icon-willpower color-willpower"></span>{% endfor %}{% endif %}
-	{% if card.skill_intellect %}{% for i in 1..card.skill_intellect %}<span title="Intellect" class="icon icon-intellect color-intellect"></span>{% endfor %}{% endif %}
-	{% if card.skill_combat %}{% for i in 1..card.skill_combat %}<span title="Combat" class="icon icon-combat color-combat"></span>{% endfor %}{% endif %}
-	{% if card.skill_agility %}{% for i in 1..card.skill_agility %}<span title="Agility" class="icon icon-agility color-agility"></span>{% endfor %}{% endif %}
-	{% if card.skill_wild %}{% for i in 1..card.skill_wild %}<span title="Wild" class="icon icon-wild color-wild"></span>{% endfor %}{% endif %}
-	</div>
-	{% endif %}
-	{% if card.health or card.sanity%}
-	<div>
-	{% trans %}Health{% endtrans %}: {{ macros.integer_or_x(card.health) }}.
-	{% trans %}Sanity{% endtrans %}: {{ macros.integer_or_x(card.sanity) }}.
-	</div>
-	{% endif %}
-{% endif %}
-
 
 
