--- a/src/AppBundle/Resources/public/css/bootstrap.css
+++ b/src/AppBundle/Resources/public/css/bootstrap.css
@@ -1588,6 +1588,11 @@ pre code {
     width: 1170px;
   }
 }
+@media (min-width: 1600px) {
+  .container-wide {
+    width: 1470px;
+  }
+}
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
