--- a/src/AppBundle/Resources/views/Search/display-card-related.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card-related.html.twig
@@ -1,71 +1,48 @@
 
 {% if card.type_code == "investigator" %}
-<div class="col-md-12">
-	<div class="row">
-		<div class="col-md-9">
-			<div style="line-height:34px" id="related-header">
-				<span style="font-size:24px">{% trans %}Deck Building{% endtrans %}</span>
-			</div>
-			<a href="{{ path('cards_find',{q:'do:' ~ card.code}) }}" >Search for cards usable by this investigator</a></li>
-		</div>
-	</div>
-</div>
-
+	<h4 id="related-header">
+		{% trans %}Deck Building{% endtrans %}
+	</h4>
+	<a href="{{ path('cards_find',{q:'do:' ~ card.code}) }}" >Search for cards usable by this investigator</a></li>
 {% endif %}
 
 {% if card.bonded_cards is defined and card.bonded_cards|length > 0 %}
-<div class="col-md-12" style="margin-top:2em">
-<div class="row">
-	<div class="col-md-9">
-
-		<div style="line-height:34px" id="related-header">
-			<span style="font-size:24px">{% trans %}Bonded Cards{% endtrans %}</span>
-		</div>
-		<ul>
-		{% for bonded in card.bonded_cards %}
-			<li>
-				<span class="icon icon-{{ bonded.getType().getCode()}} fg-{{ bonded.getFaction().getCode() }}"></span>
-				<a href="{{ path('cards_zoom',{card_code:bonded.code}) }}" class="{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %} card-tip" data-code="{{ bonded.code }}">
-				{{ bonded.name }}{% if bonded.subname%}: {{ bonded.subname }}{% endif %}
-				{% if bonded.backname %}: {{ bonded.backname }}{% endif %}</a>
-				{% if bonded.xp %}<span class="xp-{{ bonded.xp }}"> ({{ bonded.xp }})</span>{% endif %}
-				{{bonded.getPack().getName()}} #{{bonded.position}}
-			</li>
-		{% endfor %}
-		</ul>
-
-	</div>
-</div>
-</div>
+	<h4 id="related-header">
+		{% trans %}Bonded Cards{% endtrans %}
+	</h4>
+	<ul>
+	{% for bonded in card.bonded_cards %}
+		<li>
+			<span class="icon icon-{{ bonded.getType().getCode()}} fg-{{ bonded.getFaction().getCode() }}"></span>
+			<a href="{{ path('cards_zoom',{card_code:bonded.code}) }}" class="{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %} card-tip" data-code="{{ bonded.code }}">
+			{{ bonded.name }}{% if bonded.subname%}: {{ bonded.subname }}{% endif %}
+			{% if bonded.backname %}: {{ bonded.backname }}{% endif %}</a>
+			{% if bonded.xp %}<span class="xp-{{ bonded.xp }}"> ({{ bonded.xp }})</span>{% endif %}
+			({{bonded.getPack().getName()}} #{{bonded.position}})
+		</li>
+	{% endfor %}
+	</ul>
 {% endif %}
 
 
-{% if card.related and card.related|length > 1 %}
-<div class="col-md-12" style="margin-top:2em">
-<div class="row">
-	<div class="col-md-9">
-
-		<div style="line-height:34px" id="related-header">
-			<span style="font-size:24px">{% trans %}Related Cards{% endtrans %}</span>
-		</div>
-		<ul>
-		{% for related in card.related %}
-			{% if card.code != related.code %}
-			<li>
-				<span class="icon icon-{{ related.getType().getCode()}} fg-{{ related.getFaction().getCode() }}"></span>
-				<a href="{{ path('cards_zoom',{card_code:related.code}) }}" class="{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %} card-tip" data-code="{{ related.code }}">
-				{{ related.name }}{% if related.subname %}{% if related.getType().getCode() == "treachery" %} ({{ related.subname }}){% else %}: {{ related.subname }}{% endif %}{% endif %}
-				{% if related.backname %}: {{ related.backname }}{% endif %}</a>
-				{% if related.xp %}<span class="xp-{{ related.xp }}"> ({{ related.xp }})</span>{% endif %}
-				{{related.getPack().getName()}} #{{related.position}}
-				</li>
-			{% endif %}
-		{% endfor %}
-		</ul>
-
-	</div>
-</div>
-</div>
+{% if card.related is defined and card.related and card.related|length > 1 %}
+	<h4 id="related-header">
+		{% trans %}Related Cards{% endtrans %}
+	</h4>
+	<ul>
+	{% for related in card.related %}
+		{% if card.code != related.code %}
+		<li>
+			<span class="icon icon-{{ related.getType().getCode()}} fg-{{ related.getFaction().getCode() }}"></span>
+			<a href="{{ path('cards_zoom',{card_code:related.code}) }}" class="{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %} card-tip" data-code="{{ related.code }}">
+			{{ related.name }}{% if related.subname %}{% if related.getType().getCode() == "treachery" %} ({{ related.subname }}){% else %}: {{ related.subname }}{% endif %}{% endif %}
+			{% if related.backname %}: {{ related.backname }}{% endif %}</a>
+			{% if related.xp %}<span class="xp-{{ related.xp }}"> ({{ related.xp }})</span>{% endif %}
+			({{related.getPack().getName()}} #{{related.position}})
+			</li>
+		{% endif %}
+	{% endfor %}
+	</ul>
 {% endif %}
 
 
