--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -1388,7 +1388,7 @@
 
 </ol>
 
-<h2 id="Elusive">Elusive (added in <em>The Feast of Hemlock Vale</em>)</h2>
+<h2 id="Elusive" style="color:red">Elusive (added in <em>The Feast of Hemlock Vale</em>)</h2>
 
 <p>Elusive is a keyword ability that appears on some enemies in this expansion. Elusive enemies represent enemies who want to avoid the investigators for their own survival or to accomplish their own goals.</p>
 
